# luvia

./: .gitignore  status.md
contracts/: .env.example  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
contracts/migrations/: deploy.ts  luvia-mint.json
contracts/programs/luvia_presale/: Cargo.toml
contracts/programs/luvia_presale/src/: constants.rs  errors.rs  lib.rs  pyth.rs  state.rs
contracts/tests/: luvia_presale.ts
luvia-frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
luvia-frontend/src/: App.tsx  index.css  main.tsx
luvia-frontend/src/components/luvia/: About.tsx  AnimatedNumber.tsx  Competitive.tsx  ConnectWalletButton.tsx  Countdown.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Participants.tsx  ParticleBg.tsx  Partners.tsx  PresaleStages.tsx  Reveal.tsx  Roadmap.tsx  TechStack.tsx  Tokenomics.tsx  UseCases.tsx
luvia-frontend/src/components/ui/: button.tsx
luvia-frontend/src/hooks/: useActiveWallet.ts  useBuyTokens.ts  usePresaleState.ts  useSolPrice.ts
luvia-frontend/src/idl/: luvia_presale.json  luvia_presale.ts
luvia-frontend/src/lib/reown/: appkit.tsx
luvia-frontend/src/lib/solana/: admin.ts  buyTokens.ts  config.ts  connection.ts  pdas.ts  presale.ts  program.ts  pyth.ts
luvia-frontend/src/pages/: Admin.tsx  Buy.tsx  Index.tsx
