[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Force `blake3` to a version whose `digest` dep is still 0.10 (→ crypto-common 0.1.x).
# blake3 >= 1.6 pulls in digest 0.11 → crypto-common 0.2 which requires Rust edition-2024
# support in cargo. The Solana BPF toolchain bundled with solana-cli 2.2.x uses cargo 1.84.0
# which does not support edition-2024, so we cap blake3 to the last compatible release.
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
